First Connection/src/objects/Corporation__c.object
<CustomObject>
    <description>Corporation custom object</description>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <description>Summarize Shop Annual Revenue</description>
        <label>Annual Revenue</label>
        <summarizedField>Shop__c.Shop_Annual_Revenue__c</summarizedField>
        <summaryForeignKey>Shop__c.Corporation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Corp_Label__c</fullName>
        <formula>IMAGE(
CASE( Name, 
&quot;Shops Corporation&quot;, &quot;https://upload.wikimedia.org/wikipedia/en/4/43/Movie_poster_the_corporation.jpg&quot;,
&quot;Shops Corp II&quot;, &quot;https://www.cuttingedgecapital.com/wp-content/uploads/Benefit_Corporations_Wordle1.jpg&quot;,
&quot;http://www.todayifoundout.com/wp-content/uploads/2015/12/skyscraper.png&quot;), 
&quot;Corp Label, 150, 150&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corp Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Director</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Corporations</relationshipLabel>
        <relationshipName>Corporations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Foundation_Date__c</fullName>
        <description>Foundation Date</description>
        <label>Foundation Date</label>
        <type>Date</type>
    </fields>
    <label>Corporation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Big_Corp</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Big Corp</label>
    </listViews>
    <nameField>
        <label>Corporation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Corporations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Foundation_Date_Rule</fullName>
        <active>true</active>
        <description>Check If Foundation Date &gt; TODAY</description>
        <errorConditionFormula>Foundation_Date__c  &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>Foundation_Date__c</errorDisplayField>
        <errorMessage>Foundation Date should less than today</errorMessage>
    </validationRules>
</CustomObject>